implemented domain key configuration

--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>spring-restdocs-mockmvc</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.60</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
