--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -123,6 +123,7 @@
 							<include>${project.build.finalName}.jar</include>
 						</resource>
 					</resources>
+					<serverId>docker-hub</serverId>
 				</configuration>
 			</plugin>
 		</plugins>
