implemented user query on repository

--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -94,6 +94,11 @@
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.geraldoyudo.kweeri</groupId>
+			<artifactId>kweeri-mongo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
