--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>com.geraldoyudo.kweeri</groupId>
 			<artifactId>kweeri-mongo</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
 
