--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.mmadu</groupId>
 	<artifactId>mmadu-user-service</artifactId>
-	<version>1.2.0-RELEASE</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>mmadu-user-service</name>
