configured domain template resolver

--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -2,3 +2,7 @@ spring:
   data:
     rest:
       base-path: /repo
+mmadu:
+  registration:
+    home: ${user.home}/mmadu/registration
+    templates: ${mmadu.registration.home}/templates
