implemented registration form fields fragment generator

--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     rest:
       base-path: /repo
 mmadu:
+  home: ${user.home}/mmadu
   registration:
-    home: ${user.home}/mmadu/registration
+    home: ${mmadu.home}/registration
     templates: ${mmadu.registration.home}/templates
