added integration properties to mmadu-user-service

--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
       base-path: /repo
 mmadu:
   home: ${user.home}/mmadu
+  domainKey: 2222
+  userService:
+    url: http://localhost:10080
   registration:
     home: ${mmadu.home}/registration
     templates: ${mmadu.registration.home}/templates
