--- a/mmadu-registration/pom.xml
+++ b/mmadu-registration/pom.xml
@@ -72,6 +72,10 @@
             <version>2.23.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
