--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -15,12 +15,24 @@ mmadu:
         - id: 1
           domainId: 1
           defaultRedirectUrl: https://google.com
+          headerOne: My App
+          headerThree: Register
+          instruction: Fill all the fields to register
+          submitButtonTitle: GO!!
     field-type-config:
       field-types:
         - id: 1
           name: text
           type: text
-          markup: "<p><label for='$field.name' class='sr-only'>$field.label</label><input type='text' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $inputField $inputStyle $errorStyle >$errorDisplay</p>"
+          markup: "<p><label for='$field.name' class='sr-only'>$field.label</label><input type='text' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay</p>"
+        - id: 2
+          name: email
+          type: text
+          markup: "<p><label for='$field.name' class='sr-only'>$field.label</label><input type='email' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay</p>"
+        - id: 3
+          name: password
+          type: text
+          markup: "<p><label for='$field.name' class='sr-only'>$field.label</label><input type='password' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay</p>"
     field-config:
       fields:
         - id: 1
@@ -28,8 +40,7 @@ mmadu:
           domainId: 1
           placeholder: Email
           property: email
-          fieldTypeId: 1
-          style: "color: #00ff00"
+          fieldTypeId: 2
           label: Email
           order: 1
           required: true
@@ -56,6 +67,6 @@ mmadu:
           domainId: 1
           placeholder: Password
           property: password
-          fieldTypeId: 1
+          fieldTypeId: 3
           label: Password
           order: 4
