--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
 matrix:
   include:
   - language: ruby
+    name: "Build Documentation"
     dist: trusty
     rvm:
     - 2.2.0
@@ -12,6 +13,7 @@ matrix:
     script: bundle exec rake deploy
     if: branch = master
   - language: java
+    name: "Run Tests"
     jdk:
     - oraclejdk8
     dist: trusty
