--- a/docker/.env
+++ b/docker/.env
@@ -2,3 +2,4 @@ MMADU_DOMAIN_ENCRYPT_KEYS=false
 MMADU_SECURITY_MASTER_KEY=11111111111111111111111111111111
 MMADU_DOMAIN_API_SECURITY_ENABLED=true
 MONGODB_HOST=mongodb
+MMADU_ADMIN_TOKEN=2222
