--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,6 +11,17 @@ services:
       - "8080:8080"
     depends_on:
       - mongodb
+  mmadu-registration:
+    image: geraldoyudo/mmadu-registration:1.2.1-SNAPSHOT
+    environment:
+      - mmadu.domainKey=${MMADU_ADMIN_TOKEN}
+      - mmadu.userService.url=http://mmadu-user-service:8080
+      - spring.data.mongodb.host=${MONGODB_HOST}
+    ports:
+      - "8081:8080"
+    depends_on:
+      - mongodb
+      - mmadu-user-service
   mongodb:
     image: mongo:3.4.20-xenial
     ports:
