--- a/mmadu-token-service/src/main/resources/application.yml
+++ b/mmadu-token-service/src/main/resources/application.yml
@@ -1,3 +1,12 @@
 spring:
   main:
     allow-bean-definition-overriding: true
+mmadu:
+  token-config:
+    tokens:
+      - id: 0
+        value: 1111
+      - id: 1
+        value: 1234
+      - id: admin-token
+        value: 2222
