--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -43,10 +43,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
@@ -102,6 +98,11 @@
 		<dependency>
 			<groupId>com.mmadu</groupId>
 			<artifactId>encryption-utils</artifactId>
+			<version>1.2.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mmadu</groupId>
+			<artifactId>security-utils</artifactId>
 			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
