integrated user service with security module

--- a/mmadu-user-service/src/test/resources/application.yml
+++ b/mmadu-user-service/src/test/resources/application.yml
@@ -1,6 +1,9 @@
 mmadu:
   security:
     master-key: 11111111111111111111111111111111
+  tokenService:
+    url: http://localhost:10082
+  domainKey: 2222
   domain-config:
     domains:
       - id: 0
