--- a/mmadu-token-service/src/main/resources/application.yml
+++ b/mmadu-token-service/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   main:
     allow-bean-definition-overriding: true
 mmadu:
+  tokenService:
+    url: http://localhost:8080
+  domainKey: 2222
   token-config:
     tokens:
       - id: 0
