integrated security utils module in registration service

--- a/common/security-utils/pom.xml
+++ b/common/security-utils/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>security-utils</artifactId>
     <version>1.2.1-SNAPSHOT</version>
 
-    <name>encryption-utils</name>
+    <name>security-utils</name>
     <description>Encryption components for mmadu services</description>
 
     <parent>
