--- a/mmadu-registration/pom.xml
+++ b/mmadu-registration/pom.xml
@@ -76,6 +76,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.mmadu</groupId>
+            <artifactId>security-utils</artifactId>
+            <version>1.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
