--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
 mmadu:
   home: ${user.home}/mmadu
   domainKey: 2222
+  tokenService:
+    url: http://localhost:10082
   userService:
     url: http://localhost:10080
   registration:
