--- a/mmadu-registration/src/test/resources/application.yml
+++ b/mmadu-registration/src/test/resources/application.yml
@@ -5,6 +5,8 @@ spring:
 mmadu:
   home: ${user.home}/mmadu-test
   domainKey: 2222
+  tokenService:
+    url: http://localhost:10082
   userService:
     url: http://localhost:10080
   registration:
