--- a/docker/heroku-test/user-service/application.yml
+++ b/docker/heroku-test/user-service/application.yml
@@ -1,17 +1,13 @@
 mmadu:
   security:
     master-key: 11111111111111111111111111111111
+  domainKey: 2222
+  tokenService:
+    url: https://mmadu-token-service.herokuapp.com
   domain-config:
     domains:
       - id: 0
         name: sample-domain
-        authenticationApiToken: 0
-  token-config:
-    tokens:
-      - id: 0
-        value: 1111
-      - id: admin-token
-        value: 2222
 spring:
   data:
     mongodb:
