added embedded mongo to token service

--- a/mmadu-token-service/pom.xml
+++ b/mmadu-token-service/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>security-utils</artifactId>
             <version>1.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
