--- a/mmadu-registration/pom.xml
+++ b/mmadu-registration/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>security-utils</artifactId>
             <version>1.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.restdocs</groupId>
+            <artifactId>spring-restdocs-mockmvc</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
