--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ matrix:
     install: mvn clean
     script:
     - mvn package --settings ./maven-settings-travis.xml
-    - mvn docker:build -pl mmadu-user-service,mmadu-registration -DpushImageTag --settings ./maven-settings-travis.xml
+    - mvn docker:build -pl mmadu-token-service,mmadu-user-service,mmadu-registration -DpushImageTag --settings ./maven-settings-travis.xml
+    - cd ./docker/heroku-test/token-service && heroku container:login && heroku container:push web --app mmadu-token-service && heroku container:release web --app mmadu-token-service && cd ../../../
     - cd ./docker/heroku-test/user-service && heroku container:login && heroku container:push web --app mmadu-user-service && heroku container:release web --app mmadu-user-service && cd ../../../
     - cd ./docker/heroku-test/registration && heroku container:login && heroku container:push web --app mmadu-registration && heroku container:release web --app mmadu-registration && cd ../../../
