--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mmadu</groupId>
     <artifactId>common</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.3.0-RELEASE</version>
     <packaging>pom</packaging>
 
     <modules>
