--- a/docker/heroku-test/user-registration/Dockerfile
+++ b/docker/heroku-test/user-registration/Dockerfile
@@ -1,5 +1,5 @@
-from geraldoyudo/mmadu-registration:1.2.1-SNAPSHOT
+from geraldoyudo/mmadu-registration:1.3.0-RELEASE
 
 COPY application.yml ./
 
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Xmx125m", "-jar","./mmadu-registration-1.2.1-SNAPSHOT.jar"]
+CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Xmx125m", "-jar","./mmadu-registration-1.3.0-RELEASE.jar"]
