--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.mmadu</groupId>
     <artifactId>mmadu</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.3.0-RELEASE</version>
     <packaging>pom</packaging>
 
     <name>Mmadu</name>
