--- a/mmadu-registration/pom.xml
+++ b/mmadu-registration/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.mmadu</groupId>
     <artifactId>mmadu-registration</artifactId>
-    <version>1.3.0-RELEASE</version>
+    <version>1.3.1-SNAPSHOT</version>
     <name>mmadu-registration</name>
     <description>User Registration Service</description>
 
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>com.mmadu</groupId>
             <artifactId>security-utils</artifactId>
-            <version>1.3.0-RELEASE</version>
+            <version>1.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
