--- a/common/encryption-utils/pom.xml
+++ b/common/encryption-utils/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mmadu</groupId>
     <artifactId>encryption-utils</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <name>encryption-utils</name>
     <description>Encryption components for mmadu project</description>
@@ -14,10 +14,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>14</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
